<resources>
    <string name="app_name">CodeChallenges</string>
    <string name="this_is_an_orange_textview">This is an orange Textview</string>
    <string name="this_is_a_green_textview">This is a green TextView</string>
    <string name="this_is_a_blue_textview">This is a blue TextView</string>
    <string name="this_is_a_button">This is a button</string>
    <string name="this_is_a_green_button">This is a green button</string>
    <string name="this_is_an_edittext">This is an EditText</string>
    <string name="this_is_a_new_edittext">This is a new EditText</string>
    <string name="notify_me">Notify me:)</string>
    <string name="auto_backup">Auto backup</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="text_long_for_scroll">\"What is Lorem Ipsum?\\n\" +                 \"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem\" +                 \" Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an\" +                 \" unknown printer took a galley of type and scrambled it to make a type specimen \" +                 \"book. It has survived not only five centuries, but also the leap into electronic\" +                 \" typesetting, remaining essentially unchanged. It was popularised in the 1960s \" +                 \"with the release of Letraset sheets containing Lorem Ipsum passages, and more \" +                 \"recently with desktop publishing software like Aldus PageMaker including \" +                 \"versions of Lorem Ipsum.\\n\" +                 \"\\n\" +                 \"Why do we use it?\\n\" +                 \"It is a long established fact that a reader will be distracted by the readable \" +                 \"content of a page when looking at its layout. The point of using Lorem Ipsum is \" +                 \"that it has a more-or-less normal distribution of letters, as opposed to using \" +                 \"\'Content here, content here\', making it look like readable English. Many desktop\" +                 \" publishing packages and web page editors now use Lorem Ipsum as their default \" +                 \"model text, and a search for \'lorem ipsum\' will uncover many web sites still in \" +                 \"their infancy. Various versions have evolved over the years, sometimes by \" +                 \"accident, sometimes on purpose (injected humour and the like).\\n\" +                 \"\\n\" +                 \"\\n\" +                 \"Where does it come from?\\n\" +                 \"Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots \" +                 \"in a piece of classical Latin literature from 45 BC, making it over 2000 years \" +                 \"old. Richard McClintock, a Latin professor at Hampden-Sydney College in \" +                 \"Virginia, looked up one of the more obscure Latin words, consectetur, from a \" +                 \"Lorem Ipsum passage, and going through the cites of the word in classical \" +                 \"literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1\" +                 \".10.32 and 1.10.33 of \\\"de Finibus Bonorum et Malorum\\\" (The Extremes of Good \" +                 \"and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of \" +                 \"ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \" +                 \"\\\"Lorem ipsum dolor sit amet..\\\", comes from a line in section 1.10.32.\\n\" +                 \"\\n\" +                 \"The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for \" +                 \"those interested. Sections 1.10.32 and 1.10.33 from \\\"de Finibus Bonorum et \" +                 \"Malorum\\\" by Cicero are also reproduced in their exact original form, \" +                 \"accompanied by English versions from the 1914 translation by H. Rackham.\\n\" +                 \"\\n\" +                 \"Where can I get some?\\n\" +                 \"There are many variations of passages of Lorem Ipsum available, but the majority\" +                 \" have suffered alteration in some form, by injected humour, or randomised words \" +                 \"which don\'t look even slightly believable. If you are going to use a passage of \" +                 \"Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden in the\" +                 \" middle of text. All the Lorem Ipsum generators on the Internet tend to repeat \" +                 \"predefined chunks as necessary, making this the first true generator on the \" +                 \"Internet. It uses a dictionary of over 200 Latin words, combined with a handful \" +                 \"of model sentence structures, to generate Lorem Ipsum which looks reasonable. \" +                 \"The generated Lorem Ipsum is therefore always free from repetition, injected \" +                 \"humour, or non-characteristic words etc.\"</string>
    <string name="label_text_one">Text One</string>
    <string name="label_text_two">Text Two</string>
    <string name="label_text_three">Text Three</string>
    <string name="message1">mesaj1</string>
    <string name="message2">mesaj2</string>
    <string name="message3">mesaj3</string>
    <string name="pasaj1">Mesaj1 </string>
    <string name="pasaj2">Mesaj2</string>
    <string name="pasaj3">Mesaj3</string>
    <string name="hint_message">Message</string>
    <string name="label_send">Send</string>
    <string name="label_message_type_received">Message Received</string>
    <string name="label_message_type_reply">Reply Received</string>
    <string name="label_please_introduce_a_message">Introduceti un mesaj</string>
    <string name="label_open_website">Open website</string>
    <string name="label_browser">Enter your website here</string>
    <string name="label_location">Enter your location here</string>
    <string name="label_open_location">Open location</string>
    <string name="label_text">Enter your text here</string>
    <string name="label_share_text">Share text</string>
    <string name="label_call">Call</string>
    <string name="title_activity_template_navigation">TemplateNavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <!-- Week8 - MovieApp  -->

    <!--  MovieMainActivity  -->
    <string name="top_rated">Top rated movies</string>
    <string name="upcoming">Upcoming movies</string>
    <string name="now_playing">Now playing movies</string>

</resources>
