<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".week5.IntentActivity"
    android:padding="24dp">

    <EditText
        android:id="@+id/edit_text_browser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/label_browser"
        android:inputType="textWebEditText"
        tools:ignore="Autofill"/>

    <Button
        android:id="@+id/button_browser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_text_browser"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/label_open_website"
        android:onClick="oepnWebSiteOnClick"/>

    <EditText
        android:id="@+id/edit_text_locatiom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_browser"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/label_location"
        android:layout_marginTop="24dp"
        tools:ignore="Autofill"
        android:inputType="text"/>

    <Button
        android:id="@+id/button_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_text_locatiom"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/label_open_location"
        android:onClick="openLocationOnClick"/>

    <EditText
        android:id="@+id/edit_text_share_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_location"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/label_text"
        android:inputType="text"
        tools:ignore="Autofill"/>

    <Button
        android:id="@+id/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_text_share_text"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/label_share_text"
        android:onClick="shareTextOnClick"/>

    <EditText
        android:id="@+id/edit_text_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/label_text"
        android:inputType="number"
        tools:ignore="Autofill"/>

    <Button
        android:id="@+id/button_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_text_call"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/label_call"
        android:onClick="callNumberOnClick"/>

</android.support.constraint.ConstraintLayout>